--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -23,7 +23,7 @@
   		<table>
   			<tr>
 				<td id="tocCell"></td>
-				<td id="labelCell" width="100%" style="text-align: center"></td>
+				<td id="labelCell" width="100%"></td>
 				<td id="searchCell"></td>
 				<td id="settingsCell"></td>
   			</tr>
