change status bar from table to divs and get search input positioned and working.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -23,15 +23,11 @@
 	</script>
   </head>
   <body onload="onBodyLoad()">
-  	<div id="statusRoot" style="width: auto; margin: 0">
-  		<table>
-  			<tr>
-				<td id="tocCell"></td>
-				<td id="labelCell" width="100%"></td>
-				<td id="searchCell"></td>
-				<td id="settingsCell"></td>
-  			</tr>
-  		</table>
+  	<div id="statusRoot">
+  		<div id="tocCell"></div>
+  		<div id="labelCell"></div>
+  		<div id="searchCell"></div>
+  		<div id="settingsCell"></div>
   	</div>
   	<div id="tocRoot"></div>
   	<div id="codexRoot"></div>
