Updated to Greensock 1.17.0.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="css/History.css"/>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
 	<script type="text/javascript" src="js/hammer.min.js"></script>
-	<script type="text/javascript" src="../Gitignore/GreenSock.1.17.0/src/uncompressed/TweenLite.js"></script>
-	<script type="text/javascript" src="../Gitignore/GreenSock.1.17.0/src/uncompressed/plugins/CSSPlugin.js"></script>
+	<script type="text/javascript" src="js/TweenLite.js"></script>
+	<script type="text/javascript" src="js/plugins/CSSPlugin.js"></script>
 	<script type="text/javascript" src="js/plugins/TextPlugin.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
