QuestionsView is substantially working.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/Status.css"/>
 	<link rel="stylesheet" href="css/TableContents.css"/>
 	<link rel="stylesheet" href="css/History.css"/>
+	<link rel="stylesheet" href="css/Questions.css"/>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
 	<script type="text/javascript" src="js/hammer.min.js"></script>
 	<script type="text/javascript" src="js/TweenLite.js"></script>
