--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -21,9 +21,9 @@
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
 			app = new AppViewController('WEB'); // Global root of the application
-			app.begin('QuestionsView')
+			//app.begin('QuestionsView')
 			//app.begin('HistoryView');
-			//app.begin();
+			app.begin();
 		};
 	</script>
   </head>
@@ -33,13 +33,11 @@
   		<div id="labelCell"></div>
   		<div id="searchCell"></div>
   		<div id="questionsCell"></div>
-  		<div id="settingsCell"></div>
   	</div>
   	<div id="tocRoot"></div>
   	<div id="codexRoot"></div>
   	<div id="searchRoot"></div>
   	<div id="historyRoot"></div>
   	<div id="questionsRoot"></div>
-  	<div id="settingsRoot"></div>
   </body>
 </html>
