--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -5,12 +5,7 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="msapplication-tap-highlight" content="no" />
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-	<link rel="stylesheet" href="css/Codex.css"/>
-	<link rel="stylesheet" href="css/Search.css"/>
-	<link rel="stylesheet" href="css/Status.css"/>
-	<link rel="stylesheet" href="css/TableContents.css"/>
-	<link rel="stylesheet" href="css/History.css"/>
-	<link rel="stylesheet" href="css/Questions.css"/>
+	<link rel="stylesheet" href="css/BibleApp.css"/>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
 	<script type="text/javascript" src="js/hammer.min.js"></script>
 	<script type="text/javascript" src="js/TweenLite.js"></script>
