--- a/BibleAppPG/www/index.html
+++ b/BibleAppPG/www/index.html
@@ -37,9 +37,11 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+        <script type="text/javascript" src="js/CordovaFileSystem.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
+            console.log('inside index.html');
             app.initialize();
         </script>
     </body>
