--- a/BibleAppXDK/www/index.html
+++ b/BibleAppXDK/www/index.html
@@ -20,6 +20,7 @@
     <script src="js/app.js"></script>           <!-- recommended location of your JavaScript code relative to other JS files -->
     <script src="xdk/init-dev.js"></script>     <!-- normalizes device and document ready events, see README for details -->
     <script src="js/DeviceFileSystem.js"></script>
+    <script src="js/CordovaFileWriter.js"></script>
 </head>
 
 <body>
