--- a/BibleAppXDK/www/index.html
+++ b/BibleAppXDK/www/index.html
@@ -15,7 +15,7 @@
         @-ms-viewport { width: 100vw ; zoom: 100% ; }  @viewport { width: 100vw ; zoom: 100% ; }
         @-ms-viewport { user-zoom: fixed ; }           @viewport { user-zoom: fixed ; }
     </style>
-
+    <script src="http://debug-software.intel.com/target/target-script-min.js#99HdlXtNHauu8hqq7cjZU5Q6e3YYajYW0IGRfagY9_A"></script>
     <script src="cordova.js"></script>          <!-- phantom library, needed for Cordova api calls, added during build -->
     <script src="js/app.js"></script>           <!-- recommended location of your JavaScript code relative to other JS files -->
     <script src="xdk/init-dev.js"></script>     <!-- normalizes device and document ready events, see README for details -->
