--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -15,9 +15,10 @@
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
 			app = new AppViewController('WEB'); // Global root of the application
+			app.begin('SearchView');
 			//app.begin('QuestionsView')
 			//app.begin('HistoryView');
-			app.begin();
+			//app.begin();
 		};
 	</script>
   </head>
