--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -15,7 +15,8 @@
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
 			app = new AppViewController('WEB'); // Global root of the application
-			app.begin('SearchView');
+			app.begin('TableContentsView');
+			//app.begin('SearchView');
 			//app.begin('QuestionsView')
 			//app.begin('HistoryView');
 			//app.begin();
