History is coming from database now.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -15,11 +15,11 @@
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
 			app = new AppViewController('WEB'); // Global root of the application
-			app.begin('TableContentsView');
+			//app.begin('TableContentsView');
 			//app.begin('SearchView');
 			//app.begin('QuestionsView')
 			//app.begin('HistoryView');
-			//app.begin();
+			app.begin();
 		};
 	</script>
   </head>
