--- a/BibleAppCLI/platforms/ios/www/index.html
+++ b/BibleAppCLI/platforms/ios/www/index.html
@@ -28,14 +28,26 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
+        <meta charset="utf-8" />
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" href="css/BibleApp.css"/>
         <title>Hello World</title>
     </head>
     <body>
+        <div id="statusRoot">
+            <div id="tocCell"></div>
+            <div id="labelCell"></div>
+            <div id="searchCell"></div>
+            <div id="questionsCell"></div>
+        </div>
+        <div id="tocRoot"></div>
+        <div id="codexRoot"></div>
+        <div id="searchRoot"></div>
+        <div id="historyRoot"></div>
+        <div id="questionsRoot"></div>
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
@@ -44,6 +56,9 @@
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/hammer.min.js"></script>
+        <script type="text/javascript" src="js/TweenLite.js"></script>
+        <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
