--- a/BibleAppCLI/platforms/android/assets/www/index.html
+++ b/BibleAppCLI/platforms/android/assets/www/index.html
@@ -34,27 +34,20 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" href="css/BibleApp.css"/>
-        <title>Hello World</title>
+        <title>The Bible</title> <!-- must be in language of translation -->
     </head>
     <body>
         <div id="statusRoot">
             <div id="tocCell"></div>
             <div id="labelCell"></div>
-            <div id="searchCell"></div>
             <div id="questionsCell"></div>
+            <div id="searchCell"></div>
         </div>
         <div id="tocRoot"></div>
         <div id="codexRoot"></div>
         <div id="searchRoot"></div>
         <div id="historyRoot"></div>
         <div id="questionsRoot"></div>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
         <script type="text/javascript" src="js/TweenLite.js"></script>
