--- a/BibleAppCLI/www/index.html
+++ b/BibleAppCLI/www/index.html
@@ -50,8 +50,9 @@
         <div id="questionsRoot"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
-        <script type="text/javascript" src="js/TweenLite.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/TweenMax.js"></script>
+        <script type="text/javascript" src="js/ThrowPropsPlugin.js"></script>
     </body>
 </html>
