--- a/BibleAppCLI/platforms/ios/www/index.html
+++ b/BibleAppCLI/platforms/ios/www/index.html
@@ -53,6 +53,7 @@
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/TweenMax.js"></script>
+        <script type="text/javascript" src="js/Draggable.js"></script>
         <script type="text/javascript" src="js/ThrowPropsPlugin.js"></script>
     </body>
 </html>
