--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="msapplication-tap-highlight" content="no" />
-	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 	<link rel="stylesheet" href="css/BibleApp.css"/>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
 	<script type="text/javascript" src="js/hammer.min.js"></script>
-	<script type="text/javascript" src="js/TweenLite.js"></script>
-	<script type="text/javascript" src="js/plugins/CSSPlugin.js"></script>
-	<script type="text/javascript" src="js/plugins/TextPlugin.js"></script>
+	<script type="text/javascript" src="js/TweenMax.js"></script>
+	<script type="text/javascript" src="js/Draggable.js"></script>
+	<script type="text/javascript" src="js/ThrowPropsPlugin.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
