Fix bug affecting display of interactive notes.

--- a/BibleAppCLI/platforms/browser/www/index.html
+++ b/BibleAppCLI/platforms/browser/www/index.html
@@ -32,27 +32,27 @@
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
         <link rel="stylesheet" href="css/BibleApp.css"/>
         <title>The Bible</title> <!-- must be in language of translation -->
     </head>
     <body>
+        <div id="codexRoot"></div>
+        <div id="searchRoot"></div>
+        <div id="historyRoot"></div>
+        <div id="questionsRoot"></div>
+        <div id="tocRoot"></div>
         <div id="statusRoot">
             <div id="tocCell"></div>
             <div id="labelCell"></div>
             <div id="questionsCell"></div>
             <div id="searchCell"></div>
         </div>
-        <div id="tocRoot"></div>
-        <div id="codexRoot"></div>
-        <div id="searchRoot"></div>
-        <div id="historyRoot"></div>
-        <div id="questionsRoot"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/TweenMax.js"></script>
-        <script type="text/javascript" src="js/ThrowPropsPlugin.js"></script>
+        <script type="text/javascript" src="js/Draggable.js"></script>
     </body>
 </html>
