--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -14,11 +14,14 @@
 			function firstTransition() {
 				dispatchTransition('splashView', 'loginView', TRANSITION.SLIDE_LEFT);
 			}
+			function transitionToForgotView() {
+				dispatchTransition('loginView', 'forgotView', TRANSITION.SLIDE_LEFT);
+			}
 		</script>
 		<link rel="stylesheet" type="text/css" href="./Buttons.css">
 		<link rel="stylesheet" type="text/css" href="./Fields.css">
 	</head>
-	<body onload="onLoad()" style="height: 100%; display: block, position: relative">
+	<body onload="onLoad()" style="height: 100%; width: 100%; display: block, position: relative">
 		<div id="splashView" style="position: absolute; background: white">
 			<p>Hello World 1<p>
 			<button onclick="firstTransition()">Start App</button>
