Cleaned up the ViewModel classes a bit.

--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -14,7 +14,7 @@
 				nav.start();
 			}
 			function firstTransition() {
-				dispatchTransition('splashView', 'loginView', TRANSITION.SLIDE_LEFT);
+				dispatchTransition('splashView', 'loginView', TRANSITION.IMMEDIATE);
 			}
 			function transitionToForgotView() {
 				dispatchTransition('loginView', 'forgotView', TRANSITION.SLIDE_LEFT);
