--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>My Bible QA App</title>
 		<script type="text/javascript" src="lib/TweenMax.js"></script>
-		<script type="text/javascript" src="Transition.js"></script>
 		<script type="text/javascript" src="ViewNavigator.js"></script>
 		<script type="text/javascript" src="ViewLibrary.js"></script>
 		<script type="text/javascript" src="QueueViewModel.js"></script>
@@ -11,36 +10,36 @@
 		<script type="text/javascript" src="HttpClient.js"></script>
 		<script type="text/javascript">
 			function onLoad() {
-				var nav = new ViewNavigator(); 
-				nav.start();
+				TRANSITION = { EVENT: 'transition', IMMEDIATE: 'immediate', SLIDE_LEFT: 'slide-left', SLIDE_RIGHT: 'slide-right' };
+				viewNavigator = new ViewNavigator();
 			}
 			function firstTransition() {
-				dispatchTransition('splashView', 'loginView', TRANSITION.IMMEDIATE);
+				viewNavigator.transition('splashView', 'loginView', null, TRANSITION.IMMEDIATE);
 			}
 			function transitionToForgotView() {
-				dispatchTransition('loginView', 'forgotView', TRANSITION.SLIDE_LEFT);
+				viewNavigator.transition('loginView', 'forgotView', null, TRANSITION.SLIDE_LEFT);
 			}
 			function transitionBackToLoginView() {
-				dispatchTransition('forgotView', 'loginView', TRANSITION.SLIDE_RIGHT);
+				viewNavigator.transition('forgotView', 'loginView', null, TRANSITION.SLIDE_RIGHT);
 			}
 			function transitionToQueueView() {
-				dispatchTransition('loginView', 'queueView', TRANSITION.SLIDE_LEFT);
+				viewNavigator.transition('loginView', 'queueView', null, TRANSITION.SLIDE_LEFT);
 			}
 			function assignMeAQuestion() {
-				dispatchTransition('queueView', 'answerView', TRANSITION.SLIDE_LEFT);
+				viewNavigator.transition('queueView', 'answerView', null, TRANSITION.SLIDE_LEFT);
 			}
 			function refuseQuestion() {
-				dispatchTransition('answerView', 'queueView', TRANSITION.SLIDE_RIGHT);
+				viewNavigator.transition('answerView', 'queueView', null, TRANSITION.SLIDE_RIGHT);
 			}
 			function anotherQuestion() {
 				// Not a transition
-				dispatchTransition('answerView', 'answerView', TRANSITION.IMMEDIATE);
+				viewNavigator.transition('answerView', 'answerView', null, TRANSITION.IMMEDIATE);
 			}
 			function saveDraft() {
-				dispatchTransition('answerView', 'queueView', TRANSITION.SLIDE_RIGHT);
+				viewNavigator.transition('answerView', 'queueView', null, TRANSITION.SLIDE_RIGHT);
 			}
 			function sendAnswer() {
-				dispatchTransition('answerView', 'queueView', TRANSITION.SLIDE_RIGHT);
+				viewNavigator.transition('answerView', 'queueView', null, TRANSITION.SLIDE_RIGHT);
 			}
 		</script>
 		<link rel="stylesheet" type="text/css" href="./Buttons.css">
