--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -23,7 +23,7 @@
 				viewNavigator.transition('forgotView', 'loginView', null, TRANSITION.SLIDE_RIGHT);
 			}
 			function transitionToQueueView() {
-				viewNavigator.transition('loginView', 'queueView', null, TRANSITION.SLIDE_LEFT);
+				viewNavigator.transition('loginView', 'queueView', 'openQuestionCount', TRANSITION.SLIDE_LEFT);
 			}
 			function assignMeAQuestion() {
 				viewNavigator.transition('queueView', 'answerView', null, TRANSITION.SLIDE_LEFT);
