--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="ViewLibrary.js"></script>
 		<script type="text/javascript" src="QueueViewModel.js"></script>
 		<script type="text/javascript" src="AnswerViewModel.js"></script>
+		<script type="text/javascript" src="RolesViewModel.js"></script>
 		<script type="text/javascript" src="HttpClient.js"></script>
 		<script type="text/javascript" src="AuthClient.js"></script>
 		<script type="text/javascript" src="CurrentState.js"></script>
@@ -69,6 +70,9 @@
 			}
 			function sendAnswer() {
 				viewNavigator.transition('answerView', 'queueView', 'sendAnswer', TRANSITION.SLIDE_RIGHT);
+			}
+			function presentRoles() {
+				viewNavigator.transition('queueView', 'rolesView', 'presentRoles', TRANSITION.SLIDE_LEFT);
 			}
 		</script>
 		<link rel="stylesheet" type="text/css" href="./Buttons.css">
