Add buttons on checkbox.

--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="HttpClient.js"></script>
 		<script type="text/javascript" src="AuthClient.js"></script>
 		<script type="text/javascript" src="CurrentState.js"></script>
+		<script type="text/javascript" src="ButtonRow.js"></script>
 		<script type="text/javascript">
 			function onLoad() {
 				
