--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -13,6 +13,8 @@
 		<script type="text/javascript" src="AuthClient.js"></script>
 		<script type="text/javascript" src="CurrentState.js"></script>
 		<script type="text/javascript" src="ButtonRow.js"></script>
+		<script type="text/javascript" src="FormRow.js"></script>
+		<script type="text/javascript" src="RoleForms.js"></script>
 		<script type="text/javascript">
 			function onLoad() {
 				
