Turnoff all checkboxes when form is cancelled or finished.

--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -77,6 +77,9 @@
 			function presentRoles() {
 				viewNavigator.transition('queueView', 'rolesView', 'presentRoles', TRANSITION.SLIDE_LEFT);
 			}
+			function allCheckboxesOff() {
+				viewNavigator.allCheckboxesOff();
+			}
 		</script>
 		<link rel="stylesheet" type="text/css" href="./Buttons.css">
 		<link rel="stylesheet" type="text/css" href="./Fields.css">
