--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -9,12 +9,13 @@
 		<script type="text/javascript" src="QueueViewModel.js"></script>
 		<script type="text/javascript" src="AnswerViewModel.js"></script>
 		<script type="text/javascript" src="RolesViewModel.js"></script>
-		<script type="text/javascript" src="HttpClient.js"></script>
-		<script type="text/javascript" src="AuthClient.js"></script>
-		<script type="text/javascript" src="CurrentState.js"></script>
+		<script type="text/javascript" src="RolesTable.js"></script>
 		<script type="text/javascript" src="ButtonRow.js"></script>
 		<script type="text/javascript" src="FormRow.js"></script>
 		<script type="text/javascript" src="RoleForms.js"></script>
+		<script type="text/javascript" src="HttpClient.js"></script>
+		<script type="text/javascript" src="AuthClient.js"></script>
+		<script type="text/javascript" src="CurrentState.js"></script>
 		<script type="text/javascript">
 			function onLoad() {
 				
