Register new user form is tested.

--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -81,6 +81,9 @@
 			function allCheckboxesOff() {
 				viewNavigator.allCheckboxesOff();
 			}
+			function registerNewPerson() {
+				viewNavigator.registerNewPerson();
+			}
 		</script>
 		<link rel="stylesheet" type="text/css" href="./Buttons.css">
 		<link rel="stylesheet" type="text/css" href="./Fields.css">
