--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -50,15 +50,6 @@
 					});
 				}
 			}
-			//function transitionToForgotView() {
-			//	viewNavigator.transition('loginView', 'forgotView', null, TRANSITION.SLIDE_LEFT);
-			//}
-			//function transitionBackToLoginView() {
-			//	viewNavigator.transition('forgotView', 'loginView', null, TRANSITION.SLIDE_RIGHT);
-			//}
-			//function openQuestionCount() {
-			//	viewNavigator.transition('loginView', 'queueView', 'openQuestionCount', TRANSITION.SLIDE_LEFT);
-			//}
 			function assignQuestion(versionId) {
 				viewNavigator.currentState.versionId = versionId;
 				viewNavigator.transition('queueView', 'answerView', 'assignQuestion', TRANSITION.SLIDE_LEFT);
@@ -91,7 +82,7 @@
 		<link rel="stylesheet" type="text/css" href="./Buttons.css">
 		<link rel="stylesheet" type="text/css" href="./Fields.css">
 	</head>
-	<body onload="onLoad()" style="height: 100%; width: 100%; display: block, position: relative">
+	<body onload="onLoad()" style="height:100%; width:100%; display:block; position:relative;">
 		<div id="splashView" style="position: absolute; background: white">
 			<p>Hello World 1<p>
 		</div>
