--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -18,7 +18,8 @@
 			//app.begin('SearchView');
 			//app.begin('QuestionsView')
 			//app.begin('HistoryView');
-			app.begin();
+			app.begin('VersionsView');
+			//app.begin();
 		};
 	</script>
   </head>
@@ -28,6 +29,7 @@
     <div id="historyRoot"></div>
     <div id="questionsRoot"></div>
     <div id="tocRoot"></div>
+    <div id="settingRoot"></div>
     <div id="statusRoot">
         <div id="tocCell"></div>
         <div id="labelCell"></div>
