Wrote prototype Controls.html and started SettingsView.js

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -18,7 +18,8 @@
 			//app.begin('SearchView');
 			//app.begin('QuestionsView')
 			//app.begin('HistoryView');
-			app.begin('VersionsView');
+			//app.begin('VersionsView');
+			app.begin('SettingsView');
 			//app.begin();
 		};
 	</script>
