--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" href="css/BibleApp.css"/>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
 	<script type="text/javascript" src="js/hammer.min.js"></script>
-	<script type="text/javascript" src="js/TweenMax.js"></script>
-	<script type="text/javascript" src="js/Draggable.js"></script>
+	<script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
+	<script type="text/javascript" src="licensed/greensock/Draggable.js"></script>
+	<script type="text/javascript" src="licensed/greensock/ThrowPropsPlugin.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
