--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -33,12 +33,12 @@
     <div id="tocRoot"></div>
     <div id="settingRoot"></div>
     <table id="statusRoot">
-	    <tr>
-	        <td id="tocCell" class="statusCell"></td>
-	        <td id="searchCell" class="statusCell"></td>
-	        <td id="labelCell" class="statusCell"></td>
-	        <td id="questionsCell" class="statusCell"></td>
-	        <td id="settingsCell" class="statusCell"></td>
+	    <tr id="statusRow">
+	        <td id="tocCell"></td>
+	        <td id="searchCell"></td>
+	        <td id="labelCell"></td>
+	        <td id="questionsCell"></td>
+	        <td id="settingsCell"></td>
 	    </tr>
     </table>
   </body>
