Move greensock code to licensed directory in all projects.

--- a/QAApp/www/index.html
+++ b/QAApp/www/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%; width: 100%">
 	<head>
 		<title>My Bible QA App</title>
-		<script type="text/javascript" src="lib/TweenMax.js"></script>
+		<script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
 		<script type="text/javascript" src="lib/aes.js"></script>
 		<script type="text/javascript" src="ViewNavigator.js"></script>
 		<script type="text/javascript" src="ViewLibrary.js"></script>
