--- a/BibleAppCLI/www/index.html
+++ b/BibleAppCLI/www/index.html
@@ -52,7 +52,8 @@
         <script type="text/javascript" src="js/hammer.min.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/TweenMax.js"></script>
-        <script type="text/javascript" src="js/Draggable.js"></script>
+        <script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
+        <script type="text/javascript" src="licensed/greensock/Draggable.js"></script>
+        <script type="text/javascript" src="licensed/greensock/ThrowPropsPlugin.js"></script>
     </body>
 </html>
