--- a/BibleAppCLI/platforms/ios/www/index.html
+++ b/BibleAppCLI/platforms/ios/www/index.html
@@ -1,22 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <!--
@@ -37,22 +19,27 @@
         <title>The Bible</title> <!-- must be in language of translation -->
     </head>
     <body>
-        <div id="codexRoot"></div>
-        <div id="searchRoot"></div>
-        <div id="historyRoot"></div>
-        <div id="questionsRoot"></div>
-        <div id="tocRoot"></div>
-        <div id="statusRoot">
-            <div id="tocCell"></div>
-            <div id="labelCell"></div>
-            <div id="questionsCell"></div>
-            <div id="searchCell"></div>
-        </div>
+	    <div id="codexRoot"></div>
+	    <div id="searchRoot"></div>
+	    <div id="historyRoot"></div>
+	    <div id="questionsRoot"></div>
+	    <div id="tocRoot"></div>
+	    <div id="settingRoot"></div>
+	    <table id="statusRoot">
+		    <tr id="statusRow">
+		        <td id="tocCell"></td>
+		        <td id="searchCell"></td>
+		        <td id="labelCell"></td>
+		        <td id="questionsCell"></td>
+		        <td id="settingsCell"></td>
+		    </tr>
+	    </table>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/TweenMax.js"></script>
-        <script type="text/javascript" src="js/Draggable.js"></script>
+        <script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
+        <script type="text/javascript" src="licensed/greensock/Draggable.js"></script>
+        <script type="text/javascript" src="licensed/greensock/ThrowPropsPlugin.js"></script>
     </body>
 </html>
