--- a/BibleAppCLI/www/index.html
+++ b/BibleAppCLI/www/index.html
@@ -37,6 +37,7 @@
 	    </table>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/hammer.min.js"></script>
+        <script type="text/javascript" src="js/fastclick.js"></script>
         <script type="text/javascript" src="js/BibleApp.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
