--- a/BibleAppCLI/www/index.html
+++ b/BibleAppCLI/www/index.html
@@ -11,7 +11,7 @@
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
         <meta charset="utf-8" />
-        <meta http-equiv="Content-Security-Policy" content="default-src 'none' data: gap:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
+       <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
        	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
