--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="licensed/greensock/TweenMax.js"></script>
 	<script type="text/javascript" src="licensed/greensock/Draggable.js"></script>
 	<script type="text/javascript" src="licensed/greensock/ThrowPropsPlugin.js"></script>
+    <script type="text/javascript" src="licensed/greensock/TimelineLite.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
