Add CHG_VERSION event dispatch and event listeners.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -17,15 +17,14 @@
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
 			FastClick.attach(document.body);
-			//app = new AppViewController('WEB'); // Global root of the application
-			//app.begin('TableContentsView');
-			//app.begin('SearchView');
-			//app.begin('QuestionsView')
-			//app.begin('HistoryView');
-			//app.begin('VersionsView');
-			//app.begin('SettingsView');
-			//app.begin();
 			var settingStorage = new SettingStorage();
+			
+			document.body.addEventListener(BIBLE.CHG_VERSION, function(event) {
+				console.log('CHANGE VERSION', event.detail.version);
+				settingStorage.setCurrentVersion(event.detail.version);
+				changeVersionHandler(event.detail.version);
+			});
+						
 			settingStorage.getCurrentVersion(function(version) {
 				if (version == null) {
 					version = 'WEB.db1'; // Where does the defalt come from.  There should be one for each major language.
@@ -34,10 +33,6 @@
 				changeVersionHandler(version);
 			});
 			
-			document.body.addEventListener(BIBLE.CHG_VERSION, function(event) {
-				// find the version in the event
-				changeVersionHandler(version);
-			});
 			function changeVersionHandler(version) {
 				app = new AppViewController(version, settingStorage);
 				app.begin();
