--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -15,34 +15,8 @@
     <script type="text/javascript" src="licensed/greensock/TimelineLite.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
-			console.log('DEVICE IS READY **');
-			FastClick.attach(document.body);
-			var settingStorage = new SettingStorage();
-			
-			document.body.addEventListener(BIBLE.CHG_VERSION, function(event) {
-				console.log('CHANGE VERSION', event.detail.version);
-				settingStorage.setCurrentVersion(event.detail.version);
-				changeVersionHandler(event.detail.version);
-			});
-						
-			settingStorage.getCurrentVersion(function(version) {
-				if (version == null) {
-					version = 'WEB.db1'; // Where does the defalt come from.  There should be one for each major language.
-					settingStorage.setCurrentVersion(version);
-				}
-				changeVersionHandler(version);
-			});
-			
-			function changeVersionHandler(version) {
-				app = new AppViewController(version, settingStorage);
-				app.begin();
-				//app.begin('TableContentsView');
-				//app.begin('SearchView');
-				//app.begin('QuestionsView')
-				//app.begin('HistoryView');
-				//app.begin('VersionsView');
-				//app.begin('SettingsView');
-			}
+			var initializer = new AppInitializer();
+			initializer.begin();
 		};
 	</script>
   </head>
