Removed divs from index.html files and created them dynamically.

--- a/BibleAppCLI/platforms/ios/www/index.html
+++ b/BibleAppCLI/platforms/ios/www/index.html
@@ -28,7 +28,7 @@
         <title>The Bible</title>
     </head>
     <body>
-	    <div id="codexRoot"></div>
+	    <!--<div id="codexRoot"></div>
 	    <div id="searchRoot"></div>
 	    <div id="historyRoot"></div>
 	    <div id="questionsRoot"></div>
@@ -42,6 +42,6 @@
 		        <td id="questionsCell"></td>
 		        <td id="settingsCell"></td>
 		    </tr>
-	    </table>
+	    </table>-->
     </body>
 </html>
